message new users and wait for 👍 reaction

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@discordjs/builders": "^0.5.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "dayjs": "^1.10.7",
-    "discord-api-types": "^0.22.0"
+    "discord-api-types": "^0.22.0",
+    "sequelize": "^6.6.5",
+    "sqlite3": "^4.2.0"
   }
 }
