--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext .ts",
-    "start": "ts-node src/index.ts",
+    "start": "ts-node src/index.ts --experimental-fetch",
     "deploy-commands": "ts-node src/deploy-commands.ts"
   },
   "author": "",
@@ -16,7 +16,6 @@
     "@types/node": "^16.9.1",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
-    "axios": "^0.21.4",
     "cron": "^1.8.2",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
@@ -34,6 +33,6 @@
     "discord-api-types": "^0.22.0",
     "puppeteer": "^13.0.1",
     "sequelize": "^6.6.5",
-    "sqlite3": "^4.2.0"
+    "sqlite3": "^5.0.8"
   }
 }
