--- a/package.json
+++ b/package.json
@@ -12,28 +12,28 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/cron": "^1.7.3",
-    "@types/node": "^16.9.1",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
-    "axios": "^0.21.4",
-    "cron": "^1.8.2",
-    "discord.js": "^13.1.0",
-    "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
-    "prettier": "^2.4.0",
-    "ts-node": "^10.2.1",
-    "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "prettier": "^2.4.0"
   },
   "dependencies": {
     "@discordjs/builders": "^0.5.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "@types/cron": "^1.7.3",
+    "@types/node": "^16.9.1",
     "@types/puppeteer": "^5.4.4",
+    "axios": "^0.21.4",
+    "cron": "^1.8.2",
     "dayjs": "^1.10.7",
     "discord-api-types": "^0.22.0",
+    "discord.js": "^13.1.0",
+    "dotenv": "^10.0.0",
+    "mysql2": "^2.3.3",
     "puppeteer": "^13.0.1",
     "sequelize": "^6.6.5",
-    "sqlite3": "^4.2.0"
+    "ts-node": "^10.2.1",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.3"
   }
 }
